--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -38,7 +38,7 @@
 
   <footer class="footer footer-center p-10 bg-base-200 text-base-content rounded">
     <div class="grid grid-flow-col gap-4">
-      <a class="link link-hover">{% trans "About me" %}</a>
+      <a href="{% url 'core:about' %}" class="link link-hover">{% trans "About" %}</a>
       <a class="link link-hover">{% trans "Contact" %}</a>
       <div class="dropdown dropdown-top">
         <label tabindex="0" class="btn btn-xs btn-outline m-1">
