--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-<section class="relative flex flex-wrap lg:h-screen lg:items-center">
+<section class="relative flex flex-wrap lg:h-screen lg:items-center -mt-8 sm:-mt-10">
   <div class="w-full px-4 py-12 sm:px-6 sm:py-16 lg:w-1/2 lg:px-8 lg:py-24">
     <div class="mx-auto max-w-lg text-center">
       <h1 class="text-2xl font-bold sm:text-3xl">{% trans "Get started today!" %}</h1>
