--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,12 +7,11 @@
 
 <section class="relative flex flex-wrap lg:h-screen lg:items-center -mt-8 sm:-mt-10">
   <div class="w-full px-4 py-12 sm:px-6 sm:py-16 lg:w-1/2 lg:px-8 lg:py-24">
-    <div class="mx-auto max-w-lg text-center">
-      <h1 class="text-2xl font-bold sm:text-3xl">{% trans "Get started today!" %}</h1>
+    <div class="mx-auto max-w-md text-center">
+      <h1 class="text-2xl font-bold sm:text-3xl">{% trans "Welcome (back)!" %}</h1>
 
-      <p class="mt-4">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et libero nulla
-        eaque error neque ipsa culpa autem, at itaque nostrum!
+      <p class="mt-8 text-justify">
+        {% trans "This website has been designed for families as a place to share and exchange your memories and forgotten photos. Involve your family and friends to collectively restore color and presence to your shared memories" %}
       </p>
     </div>
 
